@@ -21,6 +21,7 @@
 * CardStream: Add MXN currency code [curiousepic]
 * CyberSource: Combine auth_reversal with Void [curiousepic]
 * SagePay: Fix truncation [duff]
+* CyberSource: Use localized_amount [curiousepic]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
